Implement L&F manager and Theme ComboBox in settings window